[package]
name = "iwm-anvildb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.10.4"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"