[package]
name = "iwm-java-server-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
prost = "0.10.4"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"