[package]
name = "iwm-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
colored = "2.0.0"
rand = "0.8.5"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde" ]}
tokio = { version = "1", features = ["full", "tracing"] }

futures-util = "0.3.28"
tokio-tungstenite = "0.19.0"

[dev-dependencies]
console-subscriber = "0.1.5"